Update GlazeVM config

--- a/dot_glzr/glazewm/config.yaml
+++ b/dot_glzr/glazewm/config.yaml
@@ -155,6 +155,7 @@ window_rules:
         window_class: { not_regex: "PPTFrameClass" }
       - window_title: { equals: "Command Palette" }
         window_class: { equals: "WinUIDesktopWin32WindowClass" }
+      - window_title: { regex: "(?i)setup|install|wizard" }
 
 binding_modes:
   # When enabled, the focused window can be resized via arrow keys or HJKL.
